sample/errors/sample_10.nev

enum E { ONE, ONE }

func main() -> int
{
    0
}
